src/quick/items/qquickrendercontrol_p.h
@@ -71,6 +71,7 @@ public:
     void polishItems();
     void render();
     bool sync();
+    void stop();
 
     QImage grab();
 
